--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ hmac = { version = "0.7.0", optional = true }
 bcrypt = { version = "^0.3", optional = true }
 base64 = { version = "^0.10", optional = true }
 pwhash = { version = "^0.3", optional = true }
-fastpbkdf2 = { version = "0.1.0", optional = true }
+fastpbkdf2 = {git = "https://github.com/ctz/rust-fastpbkdf2.git", optional = true}
 cargon = { version = "0.0.1", optional = true }
 constant_time_eq = { version = "0.1.3", optional = true }
 
